--- a/run.org
+++ b/run.org
@@ -123,19 +123,24 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 * Trochoidal-circle-external-array-610
   
 #+NAME: test-trochoidal-circle-array-610
-#+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-array-610-3.0mm-diameter-external.ngc :comments both :cache yes
+#+NAME: trochoidal-circle-array-610-data
+#+HEADER: :tangle yes :noweb yes :session step
+#+HEADER: :results output file :file trochoidal-circle-array-610-3.0mm-diameter-external.ngc
+#+HEADER: :comments both :cache yes 
+#+BEGIN_SRC lisp  
   (setq output-stream *STANDARD-OUTPUT*)
                     ;;;linear step
   (setq l-step 2.0d0)
   (setq zi 0.0)
   (setq f- 900)
   (setq center-array (list '(0.0 0.0) '(100 0.0) '(100.0 100.0) '(100.0 0.0)))
+  (setq center '(0.0 0.0))
   (setq tool-diameter 3.175d0)
   (setq internal-radius (/ 100.0 2.0d0))
                           ;;;most internal radius of the path
   (setq trochoidal-width 4.5)
   (setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
-  (external-trochoidal-circle-array l-step zi f- center-array tool-diameter internal-radius trochoidal-width z-list-in output-stream)
+  (external-trochoidal-circle l-step zi f- center tool-diameter internal-radius trochoidal-width z-list-in output-stream)
 
 #+END_SRC
 
@@ -143,21 +148,32 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 
 * Trochoidal-circle-external-array-610
   
-#+NAME: test-trochoidal-circle-array-610-data
-#+BEGIN_SRC lisp :tangle yes :results output raw :comments both :cache yes
+#+NAME: trochoidal-circle-array-610-data
+#+HEADER: :tangle yes :noweb yes
+#+HEADER: :results output 
+#+HEADER: :comments both :cache yes :session step
+#+BEGIN_SRC lisp  
 (setq output-stream *STANDARD-OUTPUT*)
-                    ;;;linear step
-(setq l-step 2.0d0)
+(setq l-step 20.0d0)
 (setq zi 0.0)
 (setq f- 900)
 (setq center-array (list '(0.0 0.0) '(100 0.0) '(100.0 100.0) '(100.0 0.0)))
-(setq tool-diameter 3.175d0)
+(setq center '(0.0 0.0))
+(setq tool-diameter 50d0)
 (setq internal-radius (/ 100.0 2.0d0))
-(setq trochoidal-width 4.5)
+(setq trochoidal-width 40)
 (setq external-radius (+ internal-radius trochoidal-width))
-
 (setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
+#+END_SRC
 
+#+RESULTS[4c92bf8419c841ab74c60eaf4f85ed0616867e47]: trochoidal-circle-array-610-data
+
+
+#+NAME: trochoidal-circle-array-610-print
+#+HEADER: :tangle yes :noweb yes
+#+HEADER: :results output raw 
+#+HEADER: :comments both :cache yes :session step
+#+BEGIN_SRC lisp  
 (format t "|l-step|~f| | mm|~%" l-step)
 (format t "|zi |~f|  |mm|~%" zi)
 (format t "|f- |~f| | mm/min|~%" f-)
@@ -175,38 +191,43 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 (format t "|internal-cutting-daimeter|~f| | mm |~%" (* 2.0 (- internal-radius (/ tool-diameter 2.0))))
 (format t "|external-cutting-diameter|~f| | mm|~%" (* 2.0(+ external-radius (/ tool-diameter 2.0))))
 (format t "|----|~%")
-
-
 #+END_SRC
 
-#+RESULTS[c1938b14366ef7e6abfca14540cfc371e0e8d30b]: test-trochoidal-circle-array-610-data
-| l-step                    |     2.0 |       | mm      |
-| zi                        |     0.0 |       | mm      |
-| f-                        |   900.0 |       | mm/min  |
-|---------------------------+---------+-------+---------|
-| center:                   |     0.0 |   0.0 | mm x mm |
-| center:                   |   100.0 |   0.0 | mm x mm |
-| center:                   |   100.0 | 100.0 | mm x mm |
-| center:                   |   100.0 |   0.0 | mm x mm |
-|---------------------------+---------+-------+---------|
-| tool-diameter             |   3.175 |       | mm      |
-| trochoidal-width          |     4.5 |       | mm      |
-| internal-radius           |    50.0 |       | mm      |
-| external-radius           |    54.5 |       | mm      |
-|---------------------------+---------+-------+---------|
-| internal-cutting-radius   | 48.4125 |       | mm      |
-| external-cutting-radius   | 56.0875 |       | mm      |
-| internal-cutting-daimeter |  96.825 |       | mm      |
-| external-cutting-diameter | 112.175 |       | mm      |
-|---------------------------+---------+-------+---------|
+#+RESULTS[3372bd16d8c879731f6cb246e2c4494f0d81e22b]: trochoidal-circle-array-610-print
+| l-step                    |  20.0 |       | mm      |
+| zi                        |   0.0 |       | mm      |
+| f-                        | 900.0 |       | mm/min  |
+|---------------------------+-------+-------+---------|
+| center:                   |   0.0 |   0.0 | mm x mm |
+| center:                   | 100.0 |   0.0 | mm x mm |
+| center:                   | 100.0 | 100.0 | mm x mm |
+| center:                   | 100.0 |   0.0 | mm x mm |
+|---------------------------+-------+-------+---------|
+| tool-diameter             |  50.0 |       | mm      |
+| trochoidal-width          |  40.0 |       | mm      |
+| internal-radius           |  50.0 |       | mm      |
+| external-radius           |  90.0 |       | mm      |
+|---------------------------+-------+-------+---------|
+| internal-cutting-radius   |  25.0 |       | mm      |
+| external-cutting-radius   | 115.0 |       | mm      |
+| internal-cutting-daimeter |  50.0 |       | mm      |
+| external-cutting-diameter | 230.0 |       | mm      |
+|---------------------------+-------+-------+---------|
 
-#+NAME: test-trochoidal-circle-array-610-data
-#+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-array-610-3.0mm-diameter-external.ngc :comments both :cache yes
-  (external-trochoidal-circle-array l-step zi f- center-array tool-diameter internal-radius trochoidal-width z-list-in output-stream)
+#+NAME: trochoidal-circle-array-610-gcode
+#+HEADER: :tangle yes :noweb yes
+#+HEADER: :results output  file :file trochoidal-circle-610-diameter-internal.ngc
+#+HEADER: :comments both :cache yes :session step
+#+BEGIN_SRC lisp
+<<trochoidal-circle-array-610-data>>
+(external-trochoidal-circle-array l-step zi f- center-array tool-diameter internal-radius trochoidal-width z-list-in output-stream)
 #+END_SRC
+
+#+RESULTS[92a743ac2ed8481f50672b63413ca201b10983a5]: trochoidal-circle-array-610-gcode
+[[file:trochoidal-circle-610-diameter-internal.ngc]]
 
 * Trochoidal-circle-internal-500
-  
+
 #+NAME: test-trochoidal-internal-circle-500
 #+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-500-diameter-internal.ng :comments both :cache yes
   (setq output-stream *STANDARD-OUTPUT*)
@@ -249,3 +270,50 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 
 #+RESULTS[4a9abd43523f61620b0f54d74445fb50a0c7d751]: test-trochoidal-internal-circle-496
 [[file:trochoidal-circle-496-diameter-internal.ng]]
+
+
+
+* trochoidal-circle
+
+
+* Trochoidal-circle-internal-500
+
+#+NAME: test-trochoidal-circle
+#+BEGIN_SRC lisp :tangle yes :results output file :file patoura-8mm-drum-scrubber.ngc
+(setq output-stream *STANDARD-OUTPUT*)
+(setq l-step 3.00d0)
+(setq zi 0.0)
+(setq f- 900)
+(setq center '(0.0 0.0))
+
+
+(setq tool-diameter 3.175)
+(setq diameter-inside 580.0)
+(setq diameter-outside 596.0)
+
+;;;
+(setq radius (/(+ diameter-inside tool-diameter)2.0))
+
+(setq radius (/(+ diameter-inside tool-diameter)2.0))
+
+(setq trochoidal-width (- (/(- diameter-outside diameter-inside)2.0) tool-diameter))
+
+(setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
+
+(trochoidal-data-gcode-prologue l-step zi f- center  tool-diameter radius trochoidal-width z-list-in output-stream)
+
+(prologue 8000 output-stream)
+(trochoidal-circle l-step zi f- center tool-diameter radius trochoidal-width z-list-in output-stream)
+(epilogue output-stream) 
+
+
+#+END_SRC
+
+#+RESULTS: test-trochoidal-circle
+[[file:patoura-8mm-drum-scrubber.ngc]]
+
+
+
+
+
+* trochoidal - new version
