--- a/run.org
+++ b/run.org
@@ -21,29 +21,94 @@
 #+LATEX_HEADER: \usepackage{xgreek}                                                                                 
 #+LATEX_HEADER: \setmainfont[Mapping=tex-text]{Times New Roman}
 #+SETUPFILE:   /home/quill/public_html/org-html-themes/org/theme-readtheorg-local.setup
-   
-* Drill-array-on-divide-circle
-#+name: drill-array-on-divide-circle
-#+BEGIN_SRC lisp :results output file :file test-divide.ngc
-  (setq z-list '(30.0 16.0 15.0 12.0 7.5 5.0 2.0  0.0 0.0 2.5 14  16.0 30.0 ))
-  (setq radius 10.0) 
-  (setq f- 1600.0)
-  (setq output-stream *STANDARD-OUTPUT*)
 
-  (setq center '(0.0d0 0.0d0))
-  (setq divide-radius 100.0)
-  (setq no-of-points 16) 
-  (setq point-array (divide-circle center divide-radius no-of-points))
+* Drill functions
 
-  (prologue 12000 output-stream) 
-  (drill-array point-array z-list f- f- output-stream)
+
+** Simple-drill-array-on-divide-circle
+### file :file test-divide.ngc
+
+#+name: simple-drill-array-on-divide-circle
+#+BEGIN_SRC lisp :results output 
+(setq f- 600.0)
+(setq zsafe 30.0)
+(setq zstart 12.0)
+(setq zend 0.0)
+
+(setq output-stream *STANDARD-OUTPUT*)
+
+(setq center '(0.0d0 0.0d0))
+(setq divide-radius 100.0)
+(setq no-of-points 4) 
+(setq point-array (divide-circle center divide-radius no-of-points))
+
+(prologue 2500 output-stream) 
+(drill-point-array point-array zsafe zstart zend f- f- output-stream)
+(epilogue output-stream)
+#+END_SRC
+
+#+RESULTS: simple-drill-array-on-divide-circle
+#+begin_example
+(prologue)
+ M03 S2500 
+ 
+ (end of prologue)
+
+(drilling point: X 100.000 Y   0.000)
+G0   X 100.000   Y   0.000   Z  30.000   
+G0   X 100.000   Y   0.000   Z  12.000   
+G1   X 100.000   Y   0.000   Z   0.000   F600.0 
+G0   X 100.000   Y   0.000   Z  30.000   
+
+(drilling point: X   0.000 Y 100.000)
+G0   X   0.000   Y 100.000   Z  30.000   
+G0   X   0.000   Y 100.000   Z  12.000   
+G1   X   0.000   Y 100.000   Z   0.000   F600.0 
+G0   X   0.000   Y 100.000   Z  30.000   
+
+(drilling point: X-100.000 Y   0.000)
+G0   X-100.000   Y   0.000   Z  30.000   
+G0   X-100.000   Y   0.000   Z  12.000   
+G1   X-100.000   Y   0.000   Z   0.000   F600.0 
+G0   X-100.000   Y   0.000   Z  30.000   
+
+(drilling point: X  -0.000 Y-100.000)
+G0   X  -0.000   Y-100.000   Z  30.000   
+G0   X  -0.000   Y-100.000   Z  12.000   
+G1   X  -0.000   Y-100.000   Z   0.000   F600.0 
+G0   X  -0.000   Y-100.000   Z  30.000   
+
+  (epilogue) 
+ M05
+ M30
+ 
+ (end of program)
+ %%
+#+end_example
+
+
+** Helical-drill-array-on-divide-circle
+  #+name: drill-array-on-divide-circle
+#+BEGIN_SRC lisp :results output ### file :file test-divide.ngc
+(setq z-list '(30.0  0.0  16.0 30.0 ))
+(setq radius 10.0) 
+(setq f- 1600.0)
+(setq output-stream *STANDARD-OUTPUT*)
+
+(setq center '(0.0d0 0.0d0))
+(setq divide-radius 100.0)
+(setq no-of-points 4) 
+(setq point-array (divide-circle center divide-radius no-of-points))
+
+(prologue 12000 output-stream) 
+(helical-drill-array point-array z-list radius f- f- output-stream)
   (epilogue output-stream)
 #+END_SRC
 
 #+RESULTS: drill-array-on-divide-circle
 [[file:test-divide.ngc]]
 
-* Drill array on rectangle
+** Drill array on rectangle
 We take the values from the following table:
 #+tblname: my-table
 |   x |   y |
@@ -54,7 +119,7 @@ We take the values from the following table:
 
 #+name: test-drill-array
 #+BEGIN_SRC lisp :results output :var point-array=my-table
-    (setq z-list '(10.0 7.5 5.0 2.0 0.0 0.0  2.5  7.5  12.0))
+    (setq z-list '(10.0 0.0  2.5  7.5  12.0))
     (setq radius 10.0) 
     (setq f- 600.0)
     (setq output-stream *STANDARD-OUTPUT*)
@@ -67,10 +132,6 @@ We take the values from the following table:
 
 (helical drilling point: X   0.000 Y   0.000)
 G0   X  10.000   Y   0.000   Z  10.000   
-G02   X -10.000   Y   0.000   Z   7.500  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   5.000  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   2.000  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   0.000  R  10.000  F600.0 
 G02   X -10.000   Y   0.000   Z   0.000  R  10.000  F600.0 
 G02   X  10.000   Y   0.000   Z   2.500  R  10.000  F600.0 
 G02   X -10.000   Y   0.000   Z   7.500  R  10.000  F600.0 
@@ -78,10 +139,6 @@ G1   X   0.000   Y   0.000   Z  12.000   F600.0
 
 (helical drilling point: X   1.000 Y   1.000)
 G0   X  11.000   Y   1.000   Z  10.000   
-G02   X  -9.000   Y   1.000   Z   7.500  R  10.000  F600.0 
-G02   X  11.000   Y   1.000   Z   5.000  R  10.000  F600.0 
-G02   X  -9.000   Y   1.000   Z   2.000  R  10.000  F600.0 
-G02   X  11.000   Y   1.000   Z   0.000  R  10.000  F600.0 
 G02   X  -9.000   Y   1.000   Z   0.000  R  10.000  F600.0 
 G02   X  11.000   Y   1.000   Z   2.500  R  10.000  F600.0 
 G02   X  -9.000   Y   1.000   Z   7.500  R  10.000  F600.0 
@@ -89,64 +146,15 @@ G1   X   1.000   Y   1.000   Z  12.000   F600.0
 
 (helical drilling point: X   2.000 Y   2.000)
 G0   X  12.000   Y   2.000   Z  10.000   
-G02   X  -8.000   Y   2.000   Z   7.500  R  10.000  F600.0 
-G02   X  12.000   Y   2.000   Z   5.000  R  10.000  F600.0 
-G02   X  -8.000   Y   2.000   Z   2.000  R  10.000  F600.0 
-G02   X  12.000   Y   2.000   Z   0.000  R  10.000  F600.0 
 G02   X  -8.000   Y   2.000   Z   0.000  R  10.000  F600.0 
 G02   X  12.000   Y   2.000   Z   2.500  R  10.000  F600.0 
 G02   X  -8.000   Y   2.000   Z   7.500  R  10.000  F600.0 
 G1   X   2.000   Y   2.000   Z  12.000   F600.0 
 #+end_example
 
-* Trochoidal-circle-external-610
-  
-#+NAME: test-trochoidal-circle-610
-#+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-610--3.0mm-diameter-external.ngc :comments both :cache yes
-  (setq output-stream *STANDARD-OUTPUT*)
-                    ;;;linear step
-  (setq l-step 10.0d0)
-  (setq zi 0.0)
-  (setq f- 900)
-  (setq center '(0.0 0.0))
-  (setq tool-diameter 3.175d0)
-  (setq internal-radius (/ 610.0 2.0d0))
-                          ;;;most internal radius of the path
-  (setq trochoidal-width 4.5)
-  (setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
-  (external-trochoidal-circle l-step zi f- center tool-diameter internal-radius trochoidal-width z-list-in output-stream)
-#+END_SRC
 
-
-
-
-* Trochoidal-circle-external-array-610
-  
-#+NAME: test-trochoidal-circle-array-610
-#+NAME: trochoidal-circle-array-610-data
-#+HEADER: :tangle yes :noweb yes :session step
-#+HEADER: :results output file :file trochoidal-circle-array-610-3.0mm-diameter-external.ngc
-#+HEADER: :comments both :cache yes 
-#+BEGIN_SRC lisp  
-  (setq output-stream *STANDARD-OUTPUT*)
-                    ;;;linear step
-  (setq l-step 2.0d0)
-  (setq zi 0.0)
-  (setq f- 900)
-  (setq center-array (list '(0.0 0.0) '(100 0.0) '(100.0 100.0) '(100.0 0.0)))
-  (setq center '(0.0 0.0))
-  (setq tool-diameter 3.175d0)
-  (setq internal-radius (/ 100.0 2.0d0))
-                          ;;;most internal radius of the path
-  (setq trochoidal-width 4.5)
-  (setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
-  (external-trochoidal-circle l-step zi f- center tool-diameter internal-radius trochoidal-width z-list-in output-stream)
-
-#+END_SRC
-
-
-
-* Trochoidal-circle-external-array-610
+* Trochoidal cutting
+** Trochoidal-circle-external-array-610
   
 #+NAME: trochoidal-circle-array-610-data
 #+HEADER: :tangle yes :noweb yes
@@ -226,7 +234,7 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 #+RESULTS[92a743ac2ed8481f50672b63413ca201b10983a5]: trochoidal-circle-array-610-gcode
 [[file:trochoidal-circle-610-diameter-internal.ngc]]
 
-* Trochoidal-circle-internal-500
+** Trochoidal-circle-internal-500
 
 #+NAME: test-trochoidal-internal-circle-500
 #+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-500-diameter-internal.ng :comments both :cache yes
@@ -248,8 +256,7 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 #+RESULTS[222ecd476c0e42a1f06bb25d357716aaa2ad6720]: test-trochoidal-internal-circle-500
 [[file:trochoidal-circle-500-diameter-internal.ng]]
 
-
-* Trochoidal-circle-internal-496
+** Trochoidal-circle-internal-496
 
 #+NAME: test-trochoidal-internal-circle-496
 #+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-496-diameter-internal.ng :comments both :cache yes :session step
@@ -272,11 +279,8 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 [[file:trochoidal-circle-496-diameter-internal.ng]]
 
 
-
-* trochoidal-circle
-
-
-* Trochoidal-circle-internal-500
+** trochoidal-circle
+** Trochoidal-circle-internal-500
 
 #+NAME: test-trochoidal-circle
 #+BEGIN_SRC lisp :tangle yes :results output file :file patoura-8mm-drum-scrubber.ngc
@@ -316,4 +320,3 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 
 
 
-* trochoidal - new version
