--- a/run.org
+++ b/run.org
@@ -289,8 +289,8 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 
 #+NAME: t
 #+BEGIN_SRC lisp :tangle yes :results output file :file ~/test1.ngc
-(setq output-stream *STANDARD-OUTPUT*)
-(setq xystep 8.00d0)
+(setq output-stream (open "/home/quill/test-D.ngc" :direction :output :if-does-not-exist :create :if-exists :supersede))
+(setq xystep 4.00d0)
 (setq zstep 4.0)
 (setq zsafe 50.0)
 (setq zstart 12.0)
@@ -300,12 +300,13 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 (setq center '(0.0 0.0))
 (setq tool-diameter 4.0)
 (setq internal-diameter 50.0)
-(setq external-diameter 70.0)
+(setq external-diameter 100.0)
 
 (prologue 8000 output-stream)
-(external-trochoidal-circle xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream)
+(external-D-trochoidal-circle xystep zstep zsafe zstart zend fz fxy center tool-diameter internal-diameter external-diameter output-stream)
 (epilogue output-stream) 
 
+(close output-stream)
 
 #+END_SRC
 
