--- a/tests.org
+++ b/tests.org
@@ -158,6 +158,37 @@
 : (50.0 15.0 12.0 9.0 6.0 3.0 0.0 0.0 3.0 9.0 15.0 50.0)
 
 
+
+* test helical move
+#+NAME: test-helical-function
+#+BEGIN_SRC lisp :results output
+(setq zlist (list 10.0 8.0 6.0 4.0 0.0))
+(setq start-pair (list '(0.0d0 0.0d0) '(10.0d0 0.0d0)))
+(setq fz 600)
+(setq output-stream *STANDARD-OUTPUT*)
+;(length-vector start-pair)
+(macroexpand-1 (helical-move start-pair zlist fz output-stream ccw-move-R))
+#+END_SRC
+
+#+RESULTS: test-helical-function
+#+begin_example
+
+(helical drilling: X   5.000 Y   0.000 R   5.000)
+G03   X   0.000   Y   0.000   Z  10.000  R   5.000  F600 
+G03   X  10.000   Y   0.000   Z  10.000  R   5.000  F600 
+G03   X   0.000   Y   0.000   Z   8.000  R   5.000  F600 
+G03   X  10.000   Y   0.000   Z   8.000  R   5.000  F600 
+G03   X   0.000   Y   0.000   Z   6.000  R   5.000  F600 
+G03   X  10.000   Y   0.000   Z   6.000  R   5.000  F600 
+G03   X   0.000   Y   0.000   Z   4.000  R   5.000  F600 
+G03   X  10.000   Y   0.000   Z   4.000  R   5.000  F600 
+G03   X   0.000   Y   0.000   Z   0.000  R   5.000  F600 
+G03   X  10.000   Y   0.000   Z   0.000  R   5.000  F600 
+#+end_example
+
+
+
+
 * test step function
 
 #+NAME: test-step-function
